[package]
name = "copoll"
version = "0.1.0"
edition = "2021"
authors = ["Linus Johansen <linusen.a@gmail.com>"]
repository = "https://github.com/Eskpil/copoll"
license = "Apache 2.0"
categories = ["Asynchronous"]
keywords = ["epoll", "linux"]
description = "Minimalistic abstractions for the epoll linux api"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.1"
