[package]
name = "copoll"
version = "1.3.0"
edition = "2021"
authors = ["Linus Johansen <linusen.a@gmail.com>"]
repository = "https://github.com/Eskpil/copoll"
license = "Apache-2.0"
categories = ["api-bindings", "concurrency", "network-programming", "os", "os::linux-apis"]
keywords = ["epoll", "linux"]
description = "Minimalistic abstractions for the epoll linux api"
readme = "README.md"
documentation = "https://docs.rs/copoll/1.2.0/copoll/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.1"
